--- a/static/css/modal.css
+++ b/static/css/modal.css
@@ -1,4 +1,35 @@
-.modal { display: none; position: fixed; top: 0px; left: 0px; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.8); justify-content: center; align-items: center; }
-.modal-content { background-color: rgb(60, 56, 54); border-radius: 12px; padding: 20px; width: 60vw; height: 80vh; color: rgb(251, 241, 199); margin: 15px; }
-.close-modal { background-color: transparent; font-family: "Fira Code", monospace; color: rgb(251, 241, 199); border: none; border-radius: 8px; padding: 5px 10px; cursor: pointer; float: right; }
-.close-modal:hover { background-color: rgb(74, 66, 60); }
+.modal {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    justify-content: center;
+    align-items: center;
+}
+.modal-content {
+    background-color: rgb(60, 56, 54);
+    border-radius: 12px;
+    padding: 20px;
+    padding-top: 5px;
+    width: 60vw;
+    height: 80vh;
+    color: rgb(251, 241, 199);
+    margin: 15px;
+}
+.close-modal {
+    background-color: transparent;
+    font-family: "Fira Code", monospace;
+    color: rgb(251, 241, 199);
+    border: none;
+    border-radius: 8px;
+    padding: 5px 10px;
+    cursor: pointer;
+    float: right;
+}
+.close-modal:hover {
+    background-color: rgb(74, 66, 60);
+}
+  
