--- a/static/css/base.css
+++ b/static/css/base.css
@@ -3,6 +3,9 @@
   font-family: "Fira Code", monospace;
   transition: all ease 0.2s;
 }
+ol { text-align: left; }
+ul { text-align: left; }
+
 body {
   background-color: rgb(40, 40, 40);
   color: rgb(251, 241, 199);
@@ -12,7 +15,7 @@ body {
   align-items: center;
   max-height: 100vh;
   margin: 0;
-  padding: 20vh;
+  padding: 10vh;
 }
 .box {
   background-color: rgb(60, 56, 54);
@@ -35,7 +38,7 @@ body {
   background-color: rgb(74, 66, 60);
 }
 .button:hover {
-  background-color: rgb(45, 40, 36);
+  background-color: rgb(54, 48, 42);
 }
 .item {
   padding: 0.8rem;
@@ -53,4 +56,13 @@ body {
 .item.error {
   border-left: 4px solid rgb(251, 73, 52);
   color: rgb(251, 73, 52);
+}
+
+.code-block {
+  border-radius: 8px;
+  padding: 8px;
+  text-align: left;
+  background-color: rgb(46, 41, 38);
+  border: 2px solid #58524f;
+  white-space: pre-wrap;
 }
