--- a/static/css/modal.css
+++ b/static/css/modal.css
@@ -15,6 +15,7 @@
 }
 .modal-content {
     background-color: rgb(60, 56, 54);
+    border: 1px solid rgb(124, 111, 100);
     border-radius: 12px;
     padding: 20px;
     padding-top: 5px;
