Fixed Hotkey TextEvaluation, changed styling, fixed plugin loading, and added autocomplete for commands

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,12 @@
     <body>
         <div id="calculator">
             <div id="navbar"></div>
-            <input placeholder="Type expression here..." id="input" class="input eval">
+            <input placeholder="Type expression here..." id="input" autocomplete="off" class="input eval">
+
+            <div id="cmd-suggestion">
+                <!-- <div class="button">ASDASDASD</div> -->
+            </div>
+
             <div id="preview" class="item none">Type an expression to view it's output</div>
             <div id="history"></div>
         </div>
