--- a/static/css/base.css
+++ b/static/css/base.css
@@ -26,6 +26,10 @@ body {
   height: 100%;
   box-sizing: border-box;
 }
+.hr {
+  width: 100%;
+  border: 0.5px solid #58524f;
+}
 .button {
   background-color: transparent;
   font-family: "Fira Code", monospace;
