--- a/static/css/main.css
+++ b/static/css/main.css
@@ -4,7 +4,7 @@
   height: 60vh;
   background-color: rgb(60, 56, 54);
   border-radius: 12px;
-  padding: 1rem 2rem 2rem;
+  padding: 2rem;
   box-shadow: rgba(0, 0, 0, 0.3) 0px 4px 20px;
   border: 1px solid rgb(124, 111, 100);
   display: flex;
@@ -18,10 +18,14 @@
   border-radius: 8px;
   color: rgb(251, 241, 199);
   outline: none;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
   caret-color: rgb(251, 241, 199);
   box-sizing: border-box;
   font-family: "Fira Code", monospace;
+}
+#cmd-suggestion {
+  display: flex;
+  margin-bottom: 5px;
 }
 
 .input.eval {
@@ -65,4 +69,5 @@
   border: 2px solid rgb(215, 153, 33);
   max-height: 300px;
   box-sizing: border-box;
+  gap: 5px;
 }
