--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,73 +1,51 @@
-@import url("https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;500&display=swap");
-#calculator {
-  width: 700px;
-  height: 60vh;
-  background-color: rgb(60, 56, 54);
-  border-radius: 12px;
-  padding: 2rem;
-  box-shadow: rgba(0, 0, 0, 0.3) 0px 4px 20px;
-  border: 1px solid rgb(124, 111, 100);
-  display: flex;
-  flex-direction: column;
-}
-#input {
-  width: 100%;
-  padding: 10px;
-  font-size: 1.2rem;
-  background-color: rgb(60, 56, 54);
-  border-radius: 8px;
-  color: rgb(251, 241, 199);
-  outline: none;
-  margin-bottom: 5px;
-  caret-color: rgb(251, 241, 199);
-  box-sizing: border-box;
-  font-family: "Fira Code", monospace;
-}
-#cmd-suggestion {
-  display: flex;
-  margin-bottom: 5px;
+@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap');
+@import url('/static/css/input.css');
+@import url('/static/css/preview.css');
+
+:root {
+    --color-black: rgb(28,28,28);
+    --color-grey: rgb(40,40,40);
+    --color-light-grey: rgb(60, 56, 54);
+    --color-light-grey2: rgb(124, 111, 100);
+
+    --color-primary: #d79921;
+    --color-secondary: #458588;
+
+    --color-success: #8ec07c;
+    --color-error: #cc241d;
 }
 
-.input.eval {
-  border: 2px solid rgb(215, 153, 33);
+* {
+    font-family: "JetBrains Mono", monospace;
 }
 
-.input.command {
-  border: 2px solid #458588;
+body {
+    max-height: 100vh;
+
+    margin: 0;
+    padding: 10vh;
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+    color: rgb(251, 241, 199);
+    background-color: var(--color-black);
 }
 
-.input.hotkey {
-  border: 2px solid #8ec07c;
-}
-
-.input.error {
-  border: 2px solid #cc241d;
-}
-
-#history {
-  background-color: rgb(60, 56, 54);
-  border-radius: 8px;
-  padding: 10px;
-  border: 2px solid rgb(215, 153, 33);
-  overflow-y: auto;
-  height: 100%;
-  box-sizing: border-box;
-}
-.status-bar {
-  margin-bottom: 15px;
-  color: rgb(168, 153, 132);
-  font-size: 0.9rem;
-  text-align: center;
-}
-#navbar {
-  display: flex;
-  flex-direction: row;
-  margin-bottom: 10px;
-  background-color: rgb(60, 56, 54);
-  border-radius: 8px;
-  padding: 5px;
-  border: 2px solid rgb(215, 153, 33);
-  max-height: 300px;
-  box-sizing: border-box;
-  gap: 5px;
+#calculator-container {
+    width: 60%;
+    height: 60vh;
+    
+    padding: 2rem;
+    
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    
+    background-color: var(--color-grey);
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 4px 20px;
+    
+    border-radius: 12px;
+    border: 1px solid var(--color-light-grey);
 }
