--- a/templates/index.html
+++ b/templates/index.html
@@ -1,30 +1,33 @@
 <html>
     <head>
-        <link rel="stylesheet" href="/static/css/base.css">
         <link rel="stylesheet" href="/static/css/main.css">
-        <link rel="stylesheet" href="/static/css/modal.css">
 
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-        <script type="module" src="/static/js/core.js"></script>
+        <script type="module" src="/static/js/main.js"></script>
     </head>
 
     <body>
-        <div id="calculator">
-            <div id="navbar"></div>
-            <input placeholder="Type expression here..." id="input" autocomplete="off" class="input eval">
-
-            <div id="cmd-suggestion">
-                <!-- <div class="button">ASDASDASD</div> -->
+        <!-- container -->
+        <div id="calculator-container">
+            <!-- navbar -->
+            <div id="navbar-container">
+                <button class="button">Navbar Button</button>
             </div>
-
-            <div id="preview" class="item none">Type an expression to view it's output</div>
-            <div id="history"></div>
-        </div>
-
-        <div id="modalcontainer">
-            <div id="modal" class="modal">
-                <div class="modal-content"></div>
+            
+            <!-- input box -->
+            <div id="input-container">
+                <div id="input-prefix">@</div>
+                <input id="input-box" placeholder="Type expression here..." autocomplete="off">
             </div>
+            
+            <!-- command suggestions -->
+            <div></div>
+
+            <!-- output preview -->
+            <div id="output-preview">Type an expression to view it's output</div>
+
+            <!-- output history -->
+            <div></div>
         </div>
     </body>
 </html>
