--- a/templates/index.html
+++ b/templates/index.html
@@ -11,20 +11,20 @@
         <div id="calculator-container">
             <!-- navbar -->
             <div id="navbar-container">
-                <button class="button">Navbar Button</button>
+                <button class="navbar-button">Navbar Button</button>
             </div>
             
             <!-- input box -->
             <div id="input-container">
-                <div id="input-prefix">@</div>
+                <div id="input-prefix">=</div>
                 <input id="input-box" placeholder="Type expression here..." autocomplete="off">
             </div>
             
             <!-- command suggestions -->
-            <div></div>
+            <!--<div></div>-->
 
             <!-- output preview -->
-            <div id="output-preview">Type an expression to view it's output</div>
+            <div id="output-preview" class="success">Type an expression to view it's output</div>
 
             <!-- output history -->
             <div></div>
