Edited CSS, restarted js

--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
             <!--<div></div>-->
 
             <!-- output preview -->
-            <div id="output-preview" class="success">Type an expression to view it's output</div>
+            <div id="output-preview" class="">Type an expression to view it's output</div>
 
             <!-- output history -->
             <div></div>
