Started core functionality, fixed input autocorrect

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,14 +17,19 @@
             <!-- input box -->
             <div id="input-container">
                 <div id="input-prefix">=</div>
-                <input id="input-box" placeholder="Type expression here..." autocomplete="off">
+                <input id="input-box" placeholder="Type expression here..."
+                    autocomplete="off"
+                    autocorrect="off"
+                    autocapitalize="off"
+                    spellcheck="false"
+                >
             </div>
             
             <!-- command suggestions -->
             <!--<div></div>-->
 
             <!-- output preview -->
-            <div id="output-preview" class="">Type an expression to view it's output</div>
+            <div id="output-preview">Type an expression to view it's output</div>
 
             <!-- output history -->
             <div></div>
