--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap');
+@import url('/static/css/navbar.css');
 @import url('/static/css/input.css');
 @import url('/static/css/preview.css');
-@import url('/static/css/navbar.css');
+@import url('/static/css/output.css');
 
 :root {
     --THEME-bg0: rgb(28,28,28);
