--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
     <head>
         <link rel="stylesheet" href="/static/css/main.css">
 
-        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+        <script src="/static/jquery.js"></script>
         <script type="module" src="/static/js/main.js"></script>
     </head>
 
@@ -32,7 +32,8 @@
             <div id="output-preview">Type an expression to view it's output</div>
 
             <!-- output history -->
-            <div></div>
+            <div id="output-container">
+            </div>
         </div>
     </body>
 </html>
